<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.task.core.domain.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsFragment">

        <ImageView
            android:id="@+id/detail_avatarUrl"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            app:avatar='@{data.avatarUrl ?? "" }'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@{data.type}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            tools:text="@string/exp_type" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@{data.name??data.login}"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_avatarUrl"
            tools:text="@string/exp_name" />


        <TextView
            android:id="@+id/detail_locationCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.location!=null? data.location : @string/location_not_found}"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_type"
            tools:text="@string/exp_location" />

        <TextView
            android:id="@+id/detail_txt_publicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/public_repos"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/detail_txt_followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_publicRepos" />

        <TextView
            android:id="@+id/detail_publicRepos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(data.publicRepos)}"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_txt_publicRepos"
            app:layout_constraintStart_toStartOf="@id/detail_txt_publicRepos"
            app:layout_constraintTop_toBottomOf="@+id/detail_locationCity"
            tools:text="@string/exp_publicRepos" />

        <TextView
            android:id="@+id/detail_txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/followers"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/detail_txt_following"
            app:layout_constraintStart_toEndOf="@id/detail_txt_publicRepos"
            app:layout_constraintTop_toBottomOf="@id/detail_followers" />

        <TextView
            android:id="@+id/detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@{String.valueOf(data.followers)}"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_txt_followers"
            app:layout_constraintStart_toStartOf="@id/detail_txt_followers"
            app:layout_constraintTop_toTopOf="@id/detail_publicRepos"
            tools:text="@string/exp_followers" />



        <TextView
            android:id="@+id/detail_txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/following"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detail_txt_followers"
            app:layout_constraintTop_toBottomOf="@id/detail_following" />

        <TextView
            android:id="@+id/detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(data.following)}"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/detail_txt_following"
            app:layout_constraintStart_toStartOf="@id/detail_txt_following"
            app:layout_constraintTop_toTopOf="@id/detail_followers"
            tools:text="@string/exp_following" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_txt_followers" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_unfavorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>